src/content/docs/sdk/android/v5/features/device-info.mdx
---
title: Get device information
description: Use these methods to add details to your callbacks and improve your reporting.
slug: en/sdk/android/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/android/v4/features/device-info
---

The Adjust SDK contains helper methods that return device information. Use these methods to add details to your callbacks and improve your reporting.

## Adjust device identifier {#adjust-device-identifier}

<CodeBlock title="Method signature">

```java
public static void getAdid(final OnAdidReadListener onAdidReadListener)
```

</CodeBlock>

Adjust generates a unique Adjust Device ID (ADID) for each device. You can request this information asynchronously from the Adjust SDK by passing a callback method to the `Adjust.getAdid` method.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getAdid { adid ->
   // Your callback function
}
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getAdid(new OnAdidReadListener() {
    @Override
    public void onAdidRead(String adid) {
      // Your callback function
    }
});

```

</Tab>
</Tabs>

## Google Play Services Advertising ID {#google-play-services-advertising-id}

<CodeBlock title="Method signature">

```java
public static void getGoogleAdId(final Context context,final OnGoogleAdIdReadListener onGoogleAdIdReadListener)
```

</CodeBlock>

The Google Play Services Advertising ID (GPS ADID) is a device-specific identifier for Android devices.

Users can opt out of sharing their GPS ADID by toggling the "Opt out of Ads Personalization" setting on their device. When a user enables this setting, the Adjust SDK returns a string of zeros when trying to read the GPS ADID.

You can access this value by calling the `getGoogleAdId` method in a background thread. Assign a delegate function to access the GPS ADID value.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getGoogleAdId(this, object : OnGoogleAdIdReadListener {
   override fun onGoogleAdIdRead(googleAdId: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getGoogleAdId(this, new OnGoogleAdIdReadListener() {
    @Override
    public void onGoogleAdIdRead(String googleAdId) {}
});
```

</Tab>
</Tabs>

## Amazon Advertiser ID {#amazon-advertiser-id}

<CodeBlock title="Method signature">

```java
public static void getAmazonAdId(final Context context,final OnAmazonAdIdReadListener onAmazonAdIdReadListener)
```

</CodeBlock>

The Amazon Advertising ID (Amazon Ad ID) is a device-specific identifier for Android devices. You can request this information asynchronously from the Adjust SDK by passing a callback method to the `Adjust.getAmazonAdId` method.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getAmazonAdId(applicationContext, object : OnAmazonAdIdReadListener {
   override fun onAmazonAdIdRead(amazonAdId: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getAmazonAdId(getApplicationContext(), new OnAmazonAdIdReadListener() {
    @Override
    public void onAmazonAdIdRead(String amazonAdId) {
    }
});

```

</Tab>
</Tabs>

## Adjust SDK version getter {#sdk-version-getter}

To read the version of the Adjust SDK, pass a callback function to the `Adjust.getSdkVersion` method. The version number is available as a `String` in your callback function.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getSdkVersion {sdkVersion ->
   // Your callback function
}
```

</Tab>
<Tab title="Java" sync="java">

```java
Adjust.getSdkVersion(new OnSdkVersionReadListener() {
   @Override
   public void onSdkVersionRead(String sdkVersion) {
      // Your callback function
   }
})
```

</Tab>
</Tabs>
